export const snapshot = {};

snapshot[`postcss plugin 1`] = `2`;

snapshot[`postcss plugin 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      loader: [AsyncFunction: module],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      loader: [AsyncFunction: module],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      loader: [AsyncFunction: json],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".json",
      loader: undefined,
      page: undefined,
      removeExtension: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      loader: [AsyncFunction: text],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".js",
      loader: undefined,
      page: undefined,
      removeExtension: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      loader: undefined,
      page: undefined,
      removeExtension: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      loader: [AsyncFunction: text],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".yaml",
      loader: [AsyncFunction: yaml],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".yml",
      loader: [AsyncFunction: yaml],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".css",
      loader: [AsyncFunction: text],
      page: true,
      removeExtension: undefined,
    },
  ],
}
`;

snapshot[`postcss plugin 3`] = `
[
]
`;

snapshot[`postcss plugin 4`] = `
{
  content: "::root {
  --color: #333;
  --background: #fff;
  --font-family: sans-serif;
}
.text {
  font-family: var(--font-family)
}
.text p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    -webkit-backface-visibility: hidden;
            backface-visibility: hidden;
  }
",
  data: {
    content: '@import "variables.css";
@import "./text.css";
',
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/index.css",
  },
  dest: {
    ext: ".css",
    path: "/index",
  },
  src: {
    ext: ".css",
    path: "/index",
  },
}
`;

snapshot[`postcss plugin 5`] = `
{
  content: ".text {
  font-family: var(--font-family)
}
.text p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    -webkit-backface-visibility: hidden;
            backface-visibility: hidden;
  }
",
  data: {
    content: ".text {
  font-family: var(--font-family);

  & p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    backface-visibility: hidden;
  }
}
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/text.css",
  },
  dest: {
    ext: ".css",
    path: "/text",
  },
  src: {
    ext: ".css",
    path: "/text",
  },
}
`;

snapshot[`postcss plugin without includes 1`] = `2`;

snapshot[`postcss plugin without includes 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      loader: [AsyncFunction: module],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      loader: [AsyncFunction: module],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      loader: [AsyncFunction: json],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".json",
      loader: undefined,
      page: undefined,
      removeExtension: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      loader: [AsyncFunction: text],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".js",
      loader: undefined,
      page: undefined,
      removeExtension: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      loader: undefined,
      page: undefined,
      removeExtension: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      loader: [AsyncFunction: text],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".yaml",
      loader: [AsyncFunction: yaml],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".yml",
      loader: [AsyncFunction: yaml],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".css",
      loader: [AsyncFunction: text],
      page: true,
      removeExtension: undefined,
    },
  ],
}
`;

snapshot[`postcss plugin without includes 3`] = `
[
]
`;

snapshot[`postcss plugin without includes 4`] = `
{
  content: '@import "variables.css";
@import "./text.css";
',
  data: {
    content: '@import "variables.css";
@import "./text.css";
',
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/index.css",
  },
  dest: {
    ext: ".css",
    path: "/index",
  },
  src: {
    ext: ".css",
    path: "/index",
  },
}
`;

snapshot[`postcss plugin without includes 5`] = `
{
  content: ".text {
  font-family: var(--font-family)
}
.text p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    -webkit-backface-visibility: hidden;
            backface-visibility: hidden;
  }
",
  data: {
    content: ".text {
  font-family: var(--font-family);

  & p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    backface-visibility: hidden;
  }
}
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/text.css",
  },
  dest: {
    ext: ".css",
    path: "/text",
  },
  src: {
    ext: ".css",
    path: "/text",
  },
}
`;
